# tbi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
db_confs/: mongod.conf
src/tbi/: __init__.py  __main__.py
src/tbi/api/: __init__.py  main.py
src/tbi/core/: __init__.py  args.py  client.py  logging.py  server.py
src/tbi/database/: __init__.py  config.py  db.py  schemas.py
src/tbi/tibia/: characters.py
